--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   functionAppName: ''
 
   # Agent VM image name
-  vmImageName: 'vs2017-win2016'
+  vmImageName: 'default'
 
   # Working Directory
   workingDirectory: '$(System.DefaultWorkingDirectory)/AzureFunctionLoadCSVtoAzureSQL'
