Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   functionAppName: ''
 
   # Agent VM image name
-  vmImageName: 'default'
+  vmImageName: 'Default'
 
   # Working Directory
   workingDirectory: '$(System.DefaultWorkingDirectory)/AzureFunctionLoadCSVtoAzureSQL'
